Alignment and responsive correction

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -16,20 +16,29 @@ section {
 .content-box {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
+    justify-content: center;
     gap: 1rem;
     margin-top: 1%;
 }
 
-@media (max-width: 1024px) {
+
+@media (max-width: 1280px) {
     section {
         margin-bottom: 5rem;
     }
 
     .content-box {
         display: grid;
-        grid-template-columns: 1fr;
+        grid-template-columns: 1fr 1fr;
         gap: 1%;
         margin-top: 1%;
         width: 100%;
+    }
+}
+
+@media (max-width: 768px) {
+    .content-box {
+        display: flex;
+        flex-direction: column;
     }
 }
