--- a/client/src/styles/project_card.css
+++ b/client/src/styles/project_card.css
@@ -113,7 +113,21 @@
     transition-duration: 0.4s;
 }
 
+@media (max-width: 1280px) {
+    .project-cards {
+        grid-template-columns: 1fr 1fr;
+    }
+}
+
 @media (max-width: 1024px) {
+    .project-cards {
+        display: grid;
+        grid-template-columns: 1fr;
+        justify-content: center;
+        align-items: center;
+        gap: 2rem;
+    }
+
     .project-card {
         padding: 0 0 2rem 0;
         transition-duration: 0s;
@@ -130,8 +144,8 @@
     }
 
     .project-card:hover {
-    background-color: rgba(156, 128, 180, 0.44);
-    translate: 0;
-    transition-duration: 0.4s;
-}
+        background-color: rgba(156, 128, 180, 0.44);
+        translate: 0;
+        transition-duration: 0.4s;
+    }
 }
