--- a/client/src/styles/skill_card.css
+++ b/client/src/styles/skill_card.css
@@ -22,9 +22,9 @@
 
 .skills-list {
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr;
     justify-content: center;
-    align-items: flex-start;
+    align-items: center;
     margin: 0;
     padding: .5rem .1rem;
     list-style: none;
@@ -38,6 +38,39 @@
     padding: 0.2rem;
     margin: 0.5rem;
     border-radius: 1rem;
+}
+
+.skill-icon {
+    width: 2.8rem;
+    height: 2.8rem;
+    margin: 0;
+    padding: 0;
+}
+
+.skill-title {
+    font-weight: 400;
+    margin: 0;
+    padding: 0;
+    font-size: 1.2rem;
+    text-align: center;
+}
+
+@media (max-width: 1280px) {
+    .skills-list {
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr 1fr;
+        justify-content: center;
+        align-items: center;
+    }
+}
+
+@media (max-width: 1024px) {
+    .skills-list {
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+        justify-content: center;
+        align-items: center;
+    }
 }
 
 @media (max-width: 768px) {
